--- a/app/build.gradle
+++ b/app/build.gradle
@@ -218,6 +218,9 @@ dependencies {
     //DO NOT UPDATE : RecyclerViewCacheUtil removed, needs rework
     implementation 'com.mikepenz:fastadapter-commons:2.1.0@aar'
 
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+
+
     //UI Component : Fab
     implementation "com.github.clans:fab:$rootProject.fabVersion"
 
