--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'de.timfreiheit.resourceplaceholders.plugin'
 
 android {
+    buildToolsVersion "28.0.2"
     compileSdkVersion 27
 
     defaultConfig {
