Fixes #1357: Add an ingredient analysis tab for Open Beauty Facts
Removed unnecessary string item

Fixes #1357: Add an ingredient analysis tab for Open Beauty Facts

Removed unnecessary string item

Extracts Required string resources

Fixes ingredient url string

Fixes requested changes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,6 +144,7 @@ dependencies {
     implementation "com.android.support:multidex:$rootProject.multidexVersion"
 
     //DI
+    implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
     implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
     compileOnly 'javax.annotation:jsr250-api:1.0'
